# mw

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  action.yaml  config.toml  postprocess.lua  release.toml  templates.lua  test.css  test.html  test.md  titlebar.toml
.github/actions/build_website/: action.yaml
.github/workflows/: host.yaml  static.yml
doc/: Makefile  preamble.tex
doc/markdown/: 01.cfg  01.md  02.cfg  02.md  _global.cfg  index.cfg  index.html
doc/markdown/res/: style.css
doc/templates/: default.html  index.html
doc/website/: 01.html  02.html  index.html
doc/website/res/: index.js  style.css
elsewhere/: test.md
markdown/: _global.ini  index.ini
markdown/res/: style.css
output/: index.html  style.css
output/docs/: index.html
pages/: 404.md  index.md  style.copy.css
pages/docs/: index.md
src/: args.rs  log.rs  main.rs  placeholder.rs
src/compiler/: mod.rs  page_opts.rs
src/markdown/: html.rs  lexer.rs  mod.rs
template_project/: Makefile
template_project/cache/templates/: default.html
template_project/markdown/: _global.cfg  index.md
template_project/markdown/res/: style.css
template_project/templates/: default.html
templates/: default.html
