[package]
name = "mkwebsite"
version = "0.2.0"
edition = "2021"
description = "A tool to build websites using markdown."
license = "BSD-2-Clause-Patent"

[dependencies]
html-escape = "0.2.13"
katex = "0.4.6"
markdown = "1.0.0-alpha"
mlua = { version = "0.9.7", features = ["lua54"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.12", features = ["parse"] }
emojicons-2021 = "2.0.0"
