[package]
name = "mkwebsite"
version = "0.5.0"
edition = "2021"
description = "A tool to build websites using markdown."
license = "BSD-2-Clause-Patent"
homepage = "https://funn.is-a.dev/mw"
repository = "https://github.com/funnsam/mw"

[dependencies]
html-escape = "0.2.13"
katex = "0.4.6"
markdown = "1.0.0-alpha"
mlua = { version = "0.9.7", features = ["lua54"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.12", features = ["parse"] }
emojicons-2021 = "2.0.0"
clap = { version = "4.5.21", features = ["derive"] }
notify = { version = "7.0.0", optional = true }

[features]
default = ["watch"]
watch = ["dep:notify"]
